# passepartout

./: .env  .env.beta  .env.beta-deploy  .env.beta.ios  .env.beta.mac  .env.dev  .env.dev-archive  .env.dev-deploy  .env.dev.ios  .env.dev.mac  .env.ios  .env.mac  .env.template.secret-codesign  .env.template.secret-deploy  .env.tvos  .gitignore  .gitmodules  .swiftlint.yml  .travis.yml  API  CHANGELOG.md  CHANGELOG.txt  CHANGELOG.txt.testflight  CLA.rst  CONTRIBUTING.md  Config.xcconfig  Gemfile  Passepartout.xctestplan  PassepartoutLibrary.xctestplan  Podfile  Podfile.include  Pulihkan  README.md  ci  index.html  swiftgen.yml  ver.html
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
Demo.xcodeproj/: project.pbxproj
Libraries/: API  Core
Passepartout/: Config.mac.xcconfig  Config.xcconfig  Constants.swift  Passepartout.xctestplan
Passepartout-Core/: Passepartout_Core.h
Passepartout-CoreTests/: ConnectionServiceTests.swift  Info.plist  InfrastructureTests.swift  UtilsTests.swift
Passepartout-iOS/: AppDelegate.swift  Config.xcconfig  Info.plist  Passepartout.entitlements
Passepartout-iOS-Tunnel/: Info.plist  PacketTunnelProvider.swift  Tunnel.entitlements
Passepartout.xcodeproj/: project.pbxproj
Passepartout.xcworkspace/: contents.xcworkspacedata
PassepartoutCore/: Package.resolved  Package.swift  swiftgen.yml
PassepartoutCore-iOS/: Info.plist  PassepartoutCore.h
PassepartoutCoreTests-iOS/: Info.plist
PassepartoutLibrary/: Package.swift  PassepartoutFrontendLibrary.xctestplan
PassepartoutTests/: ContentView.swift  PassepartoutTests.swift  PassepartoutTestsApp.swift  ProductManagerTests.swift
PassepartoutTests-iOS/: ConnectionServiceTests.swift  FileConfigurationTests.swift  Info.plist  InfrastructureTests.swift  pia-hungary.ovpn
PassepartoutUITests/: PassepartoutUITests.swift  XCUIApplication+Extensions.swift
app-android/: .gitignore  build.gradle.kts  settings.gradle.kts
app-android/app/src/main/cpp/: CMakeLists.txt  build.sh  partout.h  wrapper.c
app-android/app/src/main/cpp/libs/arm64-v8a/: 6.1
app-android/app/src/main/cpp/src/: partout.h  vpn.c  vpn.h  wrapper.c
app-apple/: .gitignore  .swiftlint.yml  swiftgen.yml
app-cross/: .gitignore  Package.resolved  Package.swift
ci/: args.sh  beta-archive.sh  beta-certs.sh  beta-deploy.sh  build-changelog.sh  build-number.sh  bump-no-log.sh  bump-since.sh  bump-version.sh  bump.sh  commit-beta-changelog.sh  commit-changelog.sh  commit-release-notes.sh  copy-api.sh  copy-readme-snapshots.sh  copy-release-notes.sh  dev-archive.sh  dev-certs.sh  dev-deploy.sh  dmg-generate.sh  dmg-notarize.sh  dmg-sign.sh  downscale-icon.sh  gen-screenshots.sh  gpg-import.sh  gpg.txt  latest-changelog.sh  list-untranslated.sh  push-release.sh  recognize-match-hostname.sh  reset-archive.sh  run-app-tests.sh  run-partout-tests.sh  run-xcode-tests.sh  set-build.sh  set-version.sh  strip-issues.sh  team-id.sh  update-asc-metadata.sh  update-asc-screenshots.sh  (+11 more)
fastlane/: .env  .env.iOS  .env.ios  .env.macOS  .env.tvOS  .env.tvos  Appfile  Deliverfile  Fastfile  Fastfile.include  (+6 more)
(+3163 files in other folders)
